--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,9 +1,21 @@
+body {
+    display: grid;
+    place-items: center;
+    height: 100vh;
+}
+
 .fadeOut{
     opacity:0;
     width:0px;
     height:0px;
     position: relative;
     transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s ease-out;
+}
+
+.form {
+    text-align: center;
+    vertical-align: middle;
+    width: 300px;
 }
 
 .loginError{
