--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,7 +1,8 @@
-body {
-    display: grid;
-    place-items: center;
-    height: 100vh;
+.login-container {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); 
 }
 
 .fadeOut{
